--- a/client/package.json
+++ b/client/package.json
@@ -19,5 +19,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "typescript": "^5.4.5"
-  }
+  },
+  "packageManager": "yarn@4.3.0"
 }
